{
    "name": "UnitsInput",
    "maps": [
        {
            "name": "Touch",
            "id": "7e58e8f5-efdc-432c-b81e-a4b17cb78aeb",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "d96d6d0f-1556-4cfd-94a3-38469edd2e0a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "6559cf9c-3ff2-4d28-a633-a0f8e034b717",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "17506af2-7e8f-4015-83d1-cc6e6da03a1b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "6661a507-adb5-4394-a9af-7dfc38e2b30b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "810bda9a-4480-4869-9496-200b1dc95705",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.1)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "97704e23-9109-4884-a579-f0b4cb25d02a",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d01ac1f-0741-458b-a63c-579e190a529b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69f31ace-d5a3-40c8-9568-714370874201",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c284cbdb-5769-4dc5-bcc1-931d70607eb3",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18cb87e2-6bf7-4eeb-a81d-05128365be1c",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00878af3-9102-4967-a64f-460cffa888dc",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": [
                {
                    "devicePath": "<VirtualMouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}